[package]
name = "win_cred_store"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.windows]
version = "0.33.0"
features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_System_Diagnostics_Debug"
]